# Andrey-Baranov

./: CMakeLists.txt
gtest/: CMakeLists.txt
lib_dsu/: CMakeLists.txt  dsu.cpp  dsu.h
lib_easy_example/: CMakeLists.txt
lib_list/: CMakeLists.txt  TList.cpp  TList.h
lib_pair/: CMakeLists.txt
lib_polynom_monom/: CMakeLists.txt  CMonom.cpp  CMonom.h  CPolinom.cpp  CPolinom.h  TDmassive.h  Tlist.h
lib_queue/: CMakeLists.txt
lib_stack/: CMakeLists.txt  DataStructureTest.h  TLStack.h  TVStack.h  Vector.h  experements.cpp  experements_1.cpp
main/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_dsu.cpp  test_list.cpp  test_monom.cpp  test_pair.cpp  test_polinom.cpp  test_queue.cpp
